cmake_minimum_required(VERSION 3.20)
project(Programowanie_Obiektowe_1 CXX)

set(CMAKE_CXX_STANDARD 17)

add_compile_options(
    "-pedantic"
    "-Wall"
    "-Wno-old-style-cast"
    "-Wno-class-memaccess"
    "-fmax-errors=16"
    "-ggdb"
    "-fdiagnostics-color=always"
)

# # Exercise 1.1
# add_executable(Programowanie_Obiektowe_1
#     exercise_1.1/main.cpp
#     exercise_1.1/complex.cpp
# )

# # Exercise 1.2
# add_executable(Programowanie_Obiektowe_1
#     exercise_1.2/main.cpp
# )

# # Exercise 1.3
# add_executable(Programowanie_Obiektowe_1
#     exercise_1.3/main.cpp
#     exercise_1.3/people.cpp
# )

# # Exercise 2.4
# add_executable(Programowanie_Obiektowe_1
# exercise_2.1/main.cpp
# exercise_2.1/euc_vector.cpp
# )

# # Exercise 2.2
# add_executable(Programowanie_Obiektowe_1
# exercise_2.2/main.cpp
# exercise_2.2/klass.cpp
# )

# # Exercise 2.3
# add_executable(Programowanie_Obiektowe_1
# exercise_2.3/main.cpp
# exercise_2.3/klass.cpp
# )

# # Exercise 2.4
# add_executable(Programowanie_Obiektowe_1
#     exercise_2.4/main.cpp
#     exercise_2.4/klass.cpp
# )

# # Exercise 3.1
# add_executable(Programowanie_Obiektowe_1
#     exercise_3.1/main.cpp
#     exercise_3.1/employees.cpp
# )

# Exercise 3.2
# add_executable(Programowanie_Obiektowe_1
#     exercise_3.2/main.cpp
#     exercise_3.2/people.cpp
# )

# Exercise 3.3
# add_executable(Programowanie_Obiektowe_1
#     exercise_3.3/main.cpp
#     exercise_3.3/resistor.cpp
# )

# Exercise 4.1
# add_executable(Programowanie_Obiektowe_1
#     exercise_4.1/main.cpp
#     exercise_4.1/solid.cpp
# )

# Exercise 5.1
# add_executable(Programowanie_Obiektowe_1
#     exercise_5.1/main.cpp
# )
